grammarCopy.js
// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/
(function(root) {
  "use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { start: peg$parsestart };
  var peg$startRuleFunction = peg$parsestart;

  var peg$c0 = "//";
  var peg$c1 = "if";
  var peg$c2 = "else";
  var peg$c3 = "for";
  var peg$c4 = "while";
  var peg$c5 = "function";
  var peg$c6 = "let";
  var peg$c7 = "const";
  var peg$c8 = "var";
  var peg$c9 = "return";
  var peg$c10 = "true";
  var peg$c11 = "false";
  var peg$c12 = "null";
  var peg$c13 = "\"";
  var peg$c14 = "'";
  var peg$c15 = "\\";
  var peg$c16 = ".";
  var peg$c17 = ";";
  var peg$c18 = "{";
  var peg$c19 = "}";
  var peg$c20 = "=";
  var peg$c21 = "(";
  var peg$c22 = ")";
  var peg$c23 = ",";
  var peg$c24 = "console";
  var peg$c25 = "log";
  var peg$c26 = "||";
  var peg$c27 = "&&";
  var peg$c28 = "==";
  var peg$c29 = "!=";
  var peg$c30 = "===";
  var peg$c31 = "!==";
  var peg$c32 = "<=";
  var peg$c33 = ">=";
  var peg$c34 = "++";
  var peg$c35 = "--";
  var peg$c36 = "[";
  var peg$c37 = "]";

  var peg$r0 = /^[ \t\n\r]/;
  var peg$r1 = /^[^\n]/;
  var peg$r2 = /^[a-zA-Z_$]/;
  var peg$r3 = /^[a-zA-Z0-9_$]/;
  var peg$r4 = /^["\\]/;
  var peg$r5 = /^['\\]/;
  var peg$r6 = /^[0-9]/;
  var peg$r7 = /^[<>]/;
  var peg$r8 = /^[+\-]/;
  var peg$r9 = /^[%*\/]/;
  var peg$r10 = /^[!\-]/;

  var peg$e0 = peg$otherExpectation("espacios");
  var peg$e1 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e2 = peg$literalExpectation("//", false);
  var peg$e3 = peg$classExpectation(["\n"], true, false);
  var peg$e4 = peg$otherExpectation("identificador");
  var peg$e5 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", "$"], false, false);
  var peg$e6 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "$"], false, false);
  var peg$e7 = peg$literalExpectation("if", false);
  var peg$e8 = peg$literalExpectation("else", false);
  var peg$e9 = peg$literalExpectation("for", false);
  var peg$e10 = peg$literalExpectation("while", false);
  var peg$e11 = peg$literalExpectation("function", false);
  var peg$e12 = peg$literalExpectation("let", false);
  var peg$e13 = peg$literalExpectation("const", false);
  var peg$e14 = peg$literalExpectation("var", false);
  var peg$e15 = peg$literalExpectation("return", false);
  var peg$e16 = peg$literalExpectation("true", false);
  var peg$e17 = peg$literalExpectation("false", false);
  var peg$e18 = peg$literalExpectation("null", false);
  var peg$e19 = peg$otherExpectation("string");
  var peg$e20 = peg$literalExpectation("\"", false);
  var peg$e21 = peg$literalExpectation("'", false);
  var peg$e22 = peg$literalExpectation("\\", false);
  var peg$e23 = peg$anyExpectation();
  var peg$e24 = peg$classExpectation(["\"", "\\"], false, false);
  var peg$e25 = peg$classExpectation(["'", "\\"], false, false);
  var peg$e26 = peg$otherExpectation("n\xFAmero");
  var peg$e27 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e28 = peg$literalExpectation(".", false);
  var peg$e29 = peg$literalExpectation(";", false);
  var peg$e30 = peg$literalExpectation("{", false);
  var peg$e31 = peg$literalExpectation("}", false);
  var peg$e32 = peg$literalExpectation("=", false);
  var peg$e33 = peg$literalExpectation("(", false);
  var peg$e34 = peg$literalExpectation(")", false);
  var peg$e35 = peg$literalExpectation(",", false);
  var peg$e36 = peg$literalExpectation("console", false);
  var peg$e37 = peg$literalExpectation("log", false);
  var peg$e38 = peg$literalExpectation("||", false);
  var peg$e39 = peg$literalExpectation("&&", false);
  var peg$e40 = peg$literalExpectation("==", false);
  var peg$e41 = peg$literalExpectation("!=", false);
  var peg$e42 = peg$literalExpectation("===", false);
  var peg$e43 = peg$literalExpectation("!==", false);
  var peg$e44 = peg$literalExpectation("<=", false);
  var peg$e45 = peg$literalExpectation(">=", false);
  var peg$e46 = peg$classExpectation(["<", ">"], false, false);
  var peg$e47 = peg$classExpectation(["+", "-"], false, false);
  var peg$e48 = peg$classExpectation(["%", "*", "/"], false, false);
  var peg$e49 = peg$classExpectation(["!", "-"], false, false);
  var peg$e50 = peg$literalExpectation("++", false);
  var peg$e51 = peg$literalExpectation("--", false);
  var peg$e52 = peg$literalExpectation("[", false);
  var peg$e53 = peg$literalExpectation("]", false);

  var peg$f0 = function() {
      return { type: "Identifier", name: text() };
    };
  var peg$f1 = function(chars) {
      return { type: "StringLiteral", value: chars.join("") };
    };
  var peg$f2 = function(chars) {
      return { type: "StringLiteral", value: chars.join("") };
    };
  var peg$f3 = function(char) { return char; };
  var peg$f4 = function(char) { return char; };
  var peg$f5 = function(value) {
      return { type: "NumberLiteral", value: parseFloat(value) };
    };
  var peg$f6 = function() { return { type: "BooleanLiteral", value: true }; };
  var peg$f7 = function() { return { type: "BooleanLiteral", value: false }; };
  var peg$f8 = function() { return { type: "NullLiteral", value: null }; };
  var peg$f9 = function(stmts) {
      return { type: "Program", body: stmts || [] };
    };
  var peg$f10 = function(first, rest) {
      return [first, ...rest.map(r => r[1])];
    };
  var peg$f11 = function(expr) {
      return { type: "ExpressionStatement", expression: expr };
    };
  var peg$f12 = function(stmts) {
      return { type: "BlockStatement", body: stmts || [] };
    };
  var peg$f13 = function(kind, name, value) {
      return { type: "VariableDeclaration", kind, name, value };
    };
  var peg$f14 = function(name, params, body) {
      return {
        type: "FunctionDeclaration",
        name,
        params: params || [],
        body
      };
    };
  var peg$f15 = function(first, rest) {
      return [first, ...rest.map(r => r[3])];
    };
  var peg$f16 = function(cond, thenStmt, elsePart) {
      return {
        type: "IfStatement",
        test: cond,
        consequent: thenStmt,
        alternate: elsePart ? elsePart[1] : null
      };
    };
  var peg$f17 = function(cond, body) {
      return { type: "WhileStatement", test: cond, body: body };
    };
  var peg$f18 = function(init, test, update, body) {
      return {
        type: "ForStatement",
        init: init || null,
        test: test || null,
        update: update || null,
        body: body
      };
    };
  var peg$f19 = function(expr) {
      return { type: "ReturnStatement", argument: expr || null };
    };
  var peg$f20 = function(arg) {
      return { type: "ConsoleLog", argument: arg };
    };
  var peg$f21 = function(left, right) {
      return { type: "AssignmentExpression", operator: "=", left, right };
    };
  var peg$f22 = function(left, rest) {
      return rest.reduce((acc, curr) => (
        { type: "LogicalExpression", operator: "||", left: acc, right: curr[3] }
      ), left);
    };
  var peg$f23 = function(left, rest) {
      return rest.reduce((acc, curr) => (
        { type: "LogicalExpression", operator: "&&", left: acc, right: curr[3] }
      ), left);
    };
  var peg$f24 = function(left, rest) {
      return rest.reduce((acc, curr) => (
        { type: "BinaryExpression", operator: curr[1], left: acc, right: curr[3] }
      ), left);
    };
  var peg$f25 = function(left, rest) {
      return rest.reduce((acc, curr) => (
        { type: "BinaryExpression", operator: curr[1], left: acc, right: curr[3] }
      ), left);
    };
  var peg$f26 = function(left, rest) {
      return rest.reduce((acc, curr) => (
        { type: "BinaryExpression", operator: curr[1], left: acc, right: curr[3] }
      ), left);
    };
  var peg$f27 = function(left, rest) {
      return rest.reduce((acc, curr) => (
        { type: "BinaryExpression", operator: curr[1], left: acc, right: curr[3] }
      ), left);
    };
  var peg$f28 = function(op, expr) {
      return {
        type: (op === "++" || op === "--") ? "UpdateExpression" : "UnaryExpression",
        operator: op,
        argument: expr,
        prefix: true  // indicates it's prefix (e.g., ++i)
      };
    };
  var peg$f29 = function(expr, op) {
      // If op exists, it's postfix
      if (op) {
        return {
          type: "UpdateExpression",
          operator: op,
          argument: expr,
          prefix: false
        };
      }
      return expr;
    };
  var peg$f30 = function(prop) {
      return { type: "prop", property: prop };
    };
  var peg$f31 = function(args) {
      return { type: "call", arguments: args || [] };
    };
  var peg$f32 = function(base, suffixes) {
      return suffixes.reduce((acc, item) => {
        if (item.type === "call") {
          return { type: "CallExpression", callee: acc, arguments: item.arguments };
        }
        return { type: "MemberExpression", object: acc, property: item.property, computed: false };
      }, base);
    };
  var peg$f33 = function(object, suffixes) {
      return suffixes.reduce((acc, item) => {
        return { type: "MemberExpression", object: acc, property: item.property, computed: false };
      }, object);
    };
  var peg$f34 = function(first, rest) {
      return [first, ...rest.map(r => r[3])];
    };
  var peg$f35 = function(elems) {
      var elements = [];
      if (elems) {
          // elems[0] is the first Expression
          elements.push(elems[0]);
          // elems[1] is an array of additional expressions, each wrapped with the comma separator pattern
          for (var i = 0; i < elems[1].length; i++) {
              elements.push(elems[1][i][3]);
          }
      }
      return { type: "ArrayExpression", elements: elements };
  };
  var peg$f36 = function() { return $3; };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0;

    s0 = peg$parseProgram();

    return s0;
  }

  function peg$parse_() {
    var s0, s1;

    peg$silentFails++;
    s0 = [];
    s1 = input.charAt(peg$currPos);
    if (peg$r0.test(s1)) {
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 === peg$FAILED) {
      s1 = peg$parseComment();
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = input.charAt(peg$currPos);
      if (peg$r0.test(s1)) {
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s1 === peg$FAILED) {
        s1 = peg$parseComment();
      }
    }
    peg$silentFails--;
    s1 = peg$FAILED;
    if (peg$silentFails === 0) { peg$fail(peg$e0); }

    return s0;
  }

  function peg$parseComment() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = input.charAt(peg$currPos);
      if (peg$r1.test(s3)) {
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = input.charAt(peg$currPos);
        if (peg$r1.test(s3)) {
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
      }
      s1 = [s1, s2];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseIdentifier() {
    var s0, s1, s2, s3, s4;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$currPos;
    peg$silentFails++;
    s2 = peg$parseReservedKeyword();
    peg$silentFails--;
    if (s2 === peg$FAILED) {
      s1 = undefined;
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s2 = input.charAt(peg$currPos);
      if (peg$r2.test(s2)) {
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = input.charAt(peg$currPos);
        if (peg$r3.test(s4)) {
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e6); }
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = input.charAt(peg$currPos);
          if (peg$r3.test(s4)) {
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e6); }
          }
        }
        peg$savedPos = s0;
        s0 = peg$f0();
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }

    return s0;
  }

  function peg$parseReservedKeyword() {
    var s0;
